# api-practicesoftwaretesting

./: .gitignore  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
tests/: test_create_brand.py  test_integration.py  test_update_brand.py  test_validate_brand.py
utils/: helpers.py
